--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,77 @@ STRIPE_SECRET_KEY=sk_test_xxx
 # ANALYTICS
 # ============================================================
 NEXT_PUBLIC_GA_ID=
+
+
+
+
+
+
+
+# ============================================================
+# EXEMPLE DE CONFIGURATION ENVIRONNEMENT - FRONTEND
+# ============================================================
+# Copier ce fichier en .env.local et remplir avec les vraies valeurs
+# Ne JAMAIS committer les fichiers .env avec des valeurs réelles
+
+# ============================================================
+# BASE DE DONNÉES - SUPABASE / POSTGRESQL
+# ============================================================
+# Format PostgreSQL/Supabase: postgresql://user:password@host:port/database
+# Obtenir ces valeurs depuis: https://app.supabase.com/project/_/settings/database
+DATABASE_URL=postgresql://postgres:your-database-password@db.your-project-ref.supabase.co:5432/postgres
+
+# URL de connexion directe (pour les migrations Prisma)
+DIRECT_URL=postgresql://postgres:your-database-password@db.your-project-ref.supabase.co:5432/postgres
+
+# ============================================================
+# SUPABASE - AUTHENTIFICATION & API
+# ============================================================
+# Obtenir ces valeurs depuis: https://app.supabase.com/project/_/settings/api
+NEXT_PUBLIC_SUPABASE_URL=https://your-project-ref.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
+
+# Clé de service (backend seulement - JAMAIS exposer côté client)
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
+
+# ============================================================
+# AUTHENTIFICATION NEXTAUTH
+# ============================================================
+# Générer avec: openssl rand -base64 32
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=changez-moi-en-production-avec-valeur-securisee
+
+# ============================================================
+# API ET BACKEND
+# ============================================================
+NEXT_PUBLIC_API_URL=http://localhost:8000
+
+# ============================================================
+# DEBUG & DÉVELOPPEMENT
+# ============================================================
+DEBUG_PRISMA=false
+DEMO_MODE=false
+
+# ============================================================
+# STOCKAGE CLOUD (Azure)
+# ============================================================
+AZURE_STORAGE_ACCOUNT=
+AZURE_STORAGE_KEY=
+AZURE_STORAGE_CONTAINER=
+
+# ============================================================
+# COMMUNICATION EMAIL
+# ============================================================
+SENDGRID_API_KEY=
+SENDGRID_FROM_EMAIL=
+
+# ============================================================
+# PAIEMENTS - STRIPE
+# ============================================================
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_xxx
+STRIPE_SECRET_KEY=sk_test_xxx
+
+# ============================================================
+# ANALYTICS
+# ============================================================
+NEXT_PUBLIC_GA_ID=
