--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,10 +11,10 @@
 SECRET_KEY=changez-moi-secret-aleatoire-securise
 
 # ============================================================
-# BASE DE DONNÉES - SQL SERVER
+# BASE DE DONNÉES - POSTGRESQL
 # ============================================================
-# Format: mssql+pyodbc://user:password@host:port/database?driver=ODBC+Driver+17+for+SQL+Server
-DATABASE_URL=mssql+pyodbc://autoloco_app:MotDePasseSecurise@localhost:1433/autoloco_db?driver=ODBC+Driver+17+for+SQL+Server
+# Format: postgresql://user:password@host:port/database
+DATABASE_URL=postgresql://postgres:MotDePasseSecurise@localhost:5432/autoloco_db
 
 # ============================================================
 # CACHE - REDIS
