--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,9 +4,9 @@ uvicorn[standard]==0.27.0
 python-multipart==0.0.6
 pydantic-settings==2.1.0
 
-# Base de données SQL Server
+# Base de données PostgreSQL
 sqlalchemy==2.0.25
-pyodbc==5.0.1
+psycopg2-binary==2.9.11
 starlette==0.35.1
 
 # Pydantic pour validation
